# kovi-plugin-shindan-maker

./: Cargo.toml  README.md
res/: shindans.toml
src/: commands.rs  data.rs  init_data.rs  lib.rs  plugin_utils.rs  types.rs
